--- a/src/main/resources/com/matteotocci/app/PaginaProfilo.fxml
+++ b/src/main/resources/com/matteotocci/app/PaginaProfilo.fxml
@@ -53,7 +53,7 @@
                 <VBox spacing="15.0" VBox.vgrow="ALWAYS">
                     <children>
                         <Label style="-fx-text-fill: #2196F3; -fx-underline: true; -fx-font-size: 16px; -fx-font-weight: bold;" text="Modifica il tuo profilo" />
-                        <GridPane hgap="8.0" vgap="8.0">
+                        <GridPane fx:id="gridPane" hgap="8.0" vgap="8.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="100.0" prefWidth="100.0" />
                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="150.0" prefWidth="200.0" />
@@ -64,21 +64,21 @@
                                 <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Cognome:" GridPane.rowIndex="1" />
                                 <TextField fx:id="cognomeTextField" editable="false" prefHeight="28.0" promptText="Inserisci il cognome" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                 <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Sesso:" GridPane.rowIndex="2" />
-                                <TextField prefHeight="28.0" promptText="Inserisci il sesso" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <TextField fx:id="sessoTextField" editable="false" prefHeight="28.0" promptText="Inserisci il sesso" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                 <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Data Nascita:" GridPane.rowIndex="3" />
-                                <TextField prefHeight="28.0" promptText="GG/MM/AAAA" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                <TextField fx:id="dataNascitaTextField" editable="false" prefHeight="28.0" promptText="GG/MM/AAAA" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                 <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Altezza (cm):" GridPane.rowIndex="4" />
-                                <TextField prefHeight="28.0" promptText="Inserisci l'altezza in cm" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <TextField fx:id="altezzaTextField" editable="false" prefHeight="28.0" promptText="Inserisci l'altezza in cm" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                 <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Peso Attuale (kg):" GridPane.rowIndex="5" />
-                                <TextField prefHeight="28.0" promptText="Inserisci il peso attuale in kg" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                <TextField fx:id="pesoAttualeTextField" editable="false" prefHeight="28.0" promptText="Inserisci il peso attuale in kg" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                                 <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Peso Ideale (kg):" GridPane.rowIndex="6" />
-                                <TextField prefHeight="28.0" promptText="Inserisci il peso ideale in kg" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                <TextField fx:id="pesoIdealeTextField" editable="false" prefHeight="28.0" promptText="Inserisci il peso ideale in kg" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                                 <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Dieta:" GridPane.rowIndex="7" />
-                                <TextField prefHeight="28.0" promptText="Inserisci il nome della dieta" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                <TextField fx:id="dietaTextField" editable="false" prefHeight="28.0" promptText="Inserisci il nome della dieta" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                                 <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Livello attività:" GridPane.rowIndex="8" />
-                                <TextField prefHeight="28.0" promptText="Inserisci il tuo tipo di attività" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                                <TextField fx:id="livelloAttivitaTextField" editable="false" prefHeight="28.0" promptText="Inserisci il tuo tipo di attività" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="8" />
                                 <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Nutrizionista:" GridPane.rowIndex="9" />
-                                <TextField prefHeight="28.0" promptText="Scegli il tuo nutrizionista" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                                <TextField fx:id="nutrizionistaTextField" editable="false" prefHeight="28.0" promptText="Scegli il tuo nutrizionista" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="9" />
                             </children>
                             <padding>
                                 <Insets bottom="10.0" top="8.0" />
