--- a/src/main/resources/com/matteotocci/app/Ricette.fxml
+++ b/src/main/resources/com/matteotocci/app/Ricette.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.Ricette">
+<AnchorPane prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.Ricette">
     <children>
         <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
@@ -48,7 +48,7 @@
 
                                 <TextField fx:id="cercaRicetta" prefHeight="42.0" prefWidth="493.0" promptText="Cerca ricetta.." />
                                 <Button fx:id="bottoneCerca" onAction="#handleCercaRicetta" prefHeight="43.0" prefWidth="190.0" text="Cerca" />
-                                <ComboBox fx:id="categoriaComboBox" prefHeight="43.0" prefWidth="150.0" promptText="Categoria" />
+                                <ComboBox fx:id="categorieRicette"  prefHeight="43.0" prefWidth="150.0" promptText="Categoria" />
                                 <Button fx:id="bottoneAggiungi" onAction="#handleApriAggiuntaRicetta" prefHeight="43.0" prefWidth="97.0" text="+" />
                                 <CheckBox fx:id="mieiAlimentiCheckBox" prefHeight="43.0" prefWidth="197.0" text=" Solo le mie ricette">
                                     <padding>
@@ -57,7 +57,7 @@
 
                             </children>
                         </HBox>
-                        <TableView fx:id="tableView" editable="true" onMouseClicked="#apriDettaglioRicetta" prefHeight="534.0" prefWidth="842.0">
+                        <TableView fx:id="tableViewRicette" editable="true" onMouseClicked="#apriDettaglioRicetta" prefHeight="534.0" prefWidth="842.0">
                             <columns>
                                 <TableColumn fx:id="nomeCol" prefWidth="200" text="Nome" />
                                 <TableColumn fx:id="descrizioneCol" prefWidth="642.0" text="Descrizione" />
