--- a/src/main/resources/com/matteotocci/app/HomePageNutrizionista.fxml
+++ b/src/main/resources/com/matteotocci/app/HomePageNutrizionista.fxml
@@ -21,7 +21,7 @@
                     <children>
                         <HBox prefHeight="69.0" prefWidth="180.0">
                             <children>
-                                <ImageView fitHeight="70.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true">
+                                <ImageView fx:id="profileImage" fitHeight="70.0" fitWidth="68.0" onMouseClicked="#openProfiloNutrizionista" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@immagini/omino_profilo.jpg" />
                                     </image>
