--- a/src/main/resources/com/matteotocci/app/DettaglioRicetta.fxml
+++ b/src/main/resources/com/matteotocci/app/DettaglioRicetta.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -9,11 +10,12 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="578.0" prefWidth="539.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.DettaglioRicettaController">
-    <VBox spacing="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
+<AnchorPane prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.DettaglioRicettaController">
+    <VBox fillWidth="false" spacing="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
         <padding>
             <Insets bottom="20" left="20" right="20" top="20" />
         </padding>
@@ -24,69 +26,104 @@
          </children>
       </HBox>
 
-        <HBox spacing="10">
-            <Label text="Categoria:" />
-            <Label fx:id="categoriaLabel" prefHeight="18.0" prefWidth="414.0" />
+        <HBox prefHeight="200.0" prefWidth="942.0" spacing="10">
+         <VBox prefHeight="200.0" prefWidth="436.0">
+            <children>
+               <HBox prefHeight="100.0" prefWidth="200.0">
+                  <children>
+                        <Label text="Categoria:" />
+                        <Label fx:id="categoriaLabel" prefHeight="18.0" prefWidth="119.0" />
+                  </children>
+               </HBox>
+               <HBox prefHeight="100.0" prefWidth="200.0">
+                  <children>
+                        <Label text="Autore:" />
+                        <Label fx:id="autoreLabel" prefHeight="18.0" prefWidth="230.0" />
+                  </children>
+               </HBox>
+            </children>
+         </VBox>
+         <VBox prefHeight="200.0" prefWidth="491.0">
+            <children>
+         
+                 <Label style="-fx-font-weight: bold;" text="Descrizione:" />
+                 <TextArea fx:id="descrizioneArea" editable="false" prefHeight="182.0" prefRowCount="4" prefWidth="594.0" wrapText="true" />
+            </children>
+         </VBox>
         </HBox>
-
-        <HBox spacing="10">
-            <Label text="Autore:" />
-            <Label fx:id="autoreLabel" prefHeight="18.0" prefWidth="430.0" />
-        </HBox>
-
-        <Label style="-fx-font-weight: bold;" text="Descrizione:" />
-        <TextArea fx:id="descrizioneArea" editable="false" prefRowCount="4" wrapText="true" />
-
-        <Label style="-fx-font-weight: bold;" text="Ingredienti:" />
-        <TableView fx:id="ingredientiTable" prefHeight="200">
-            <columns>
-                <TableColumn fx:id="nomeCol" text="Alimento" />
-                <TableColumn fx:id="quantitaCol" text="Quantità (g)" />
-            </columns>
-        </TableView>
-
-        <Label style="-fx-font-weight: bold;" text="Valori nutrizionali totali (per quantità totale):" />
-        <GridPane hgap="10" vgap="5">
-            <columnConstraints>
-                <ColumnConstraints halignment="RIGHT" />
-                <ColumnConstraints halignment="LEFT" />
-            </columnConstraints>
-
-            <rowConstraints>
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints />
-            </rowConstraints>
-
-            <Label text="Kcal:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <Label fx:id="kcalLabel" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-
-            <Label text="Proteine:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <Label fx:id="proteineLabel" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-
-            <Label text="Carboidrati:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <Label fx:id="carboidratiLabel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-
-            <Label text="Zuccheri:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <Label fx:id="zuccheriLabel" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-
-            <Label text="Grassi:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-            <Label fx:id="grassiLabel" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-
-            <Label text="Grassi Saturi:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-            <Label fx:id="grassiSaturiLabel" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-
-            <Label text="Fibre:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-            <Label fx:id="fibreLabel" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-
-            <Label text="Sale:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-            <Label fx:id="saleLabel" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-        </GridPane>
+      <HBox prefHeight="157.0" prefWidth="939.0">
+         <children>
+            <VBox prefHeight="242.0" prefWidth="448.0">
+               <children>
+            
+                    <Label style="-fx-font-weight: bold;" text="Valori nutrizionali totali (per quantità totale):" />
+                    <GridPane hgap="10" prefHeight="174.0" prefWidth="220.0" vgap="5">
+                        <columnConstraints>
+                            <ColumnConstraints halignment="RIGHT" />
+                            <ColumnConstraints halignment="LEFT" />
+                        </columnConstraints>
+            
+                        <rowConstraints>
+                            <RowConstraints />
+                            <RowConstraints />
+                            <RowConstraints />
+                            <RowConstraints />
+                            <RowConstraints />
+                            <RowConstraints />
+                            <RowConstraints />
+                            <RowConstraints />
+                        </rowConstraints>
+            
+                        <Label text="Kcal:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                        <Label fx:id="kcalLabel" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            
+                        <Label text="Proteine:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                        <Label fx:id="proteineLabel" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            
+                        <Label text="Carboidrati:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                        <Label fx:id="carboidratiLabel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            
+                        <Label text="Zuccheri:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                        <Label fx:id="zuccheriLabel" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            
+                        <Label text="Grassi:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                        <Label fx:id="grassiLabel" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            
+                        <Label text="Grassi Saturi:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                        <Label fx:id="grassiSaturiLabel" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            
+                        <Label text="Fibre:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                        <Label fx:id="fibreLabel" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            
+                        <Label text="Sale:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+                        <Label fx:id="saleLabel" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                    </GridPane>
+               </children>
+            </VBox>
+            <VBox prefHeight="242.0" prefWidth="490.0">
+               <children>
+            
+                    <Label prefHeight="18.0" prefWidth="489.0" style="-fx-font-weight: bold;" text="Ingredienti:" />
+                    <TableView fx:id="ingredientiTable" editable="true" prefHeight="225.0" prefWidth="514.0">
+                        <columns>
+                            <TableColumn fx:id="nomeCol" text="Alimento" />
+                            <TableColumn fx:id="quantitaCol" text="Quantità (g)" />
+                        </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                    </TableView>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+      <HBox alignment="TOP_RIGHT" prefHeight="34.0" prefWidth="1006.0">
+         <children>
+            <Button fx:id="bottoneElimina" mnemonicParsing="false" onAction="#handleEliminaRicetta" prefHeight="43.0" prefWidth="60.0" text="Elimina" />
+            <Region prefHeight="34.0" prefWidth="45.0" />
+            <Button mnemonicParsing="false" onAction="#chiudiFinestra" prefHeight="35.0" prefWidth="62.0" text="Chiudi" />
+         </children>
+      </HBox>
 
 
     </VBox>
