--- a/src/main/resources/com/matteotocci/app/DietaNutrizionista.fxml
+++ b/src/main/resources/com/matteotocci/app/DietaNutrizionista.fxml
@@ -1,47 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="531.0" prefWidth="922.0" stylesheets="@css/stile_HomePage.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.DietaNutrizionista">
+<AnchorPane prefHeight="531.0" prefWidth="922.0" styleClass="anchor-pane" stylesheets="@css/stile_HomePage.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.DietaNutrizionista">
     <children>
-        <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <VBox prefHeight="578.0" prefWidth="180.0">
+        <BorderPane prefHeight="531.0" prefWidth="922.0">
+            <left>
+                <VBox prefHeight="578.0" prefWidth="212.0">
                     <children>
-                        <HBox prefHeight="69.0" prefWidth="180.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="69.0" style="-fx-padding: 10;">
                             <children>
-                                <ImageView fitHeight="70.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true">
+                                <ImageView fx:id="profileImage" fitHeight="70.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@immagini/omino_profilo.jpg" />
                                     </image>
                                 </ImageView>
-                                <VBox>
-                                    <Label fx:id="nomeUtenteLabelDieta" prefHeight="35.0" prefWidth="114.0" text="Benvenuto" />
-                                    <Label fx:id="ruoloUtenteLabelDieta" prefHeight="39.0" prefWidth="113.0" text="Nome e Cognome" />
+                                <VBox style="-fx-padding: 0 0 0 10;">
+                                    <Label fx:id="nomeUtenteLabelDieta" prefHeight="35.0" style="-fx-font-weight: bold; -fx-font-size: 14px;" />
+                                    <Label fx:id="ruoloUtenteLabelDieta" prefHeight="39.0" prefWidth="113.0" style="-fx-font-size: 13px;" text="Nutrizionista" />
                                 </VBox>
                             </children>
                         </HBox>
-                        <Button maxWidth="1.7976931348623157E308" onAction="#vaiAllaPaginaClienti" mnemonicParsing="false" prefHeight="75.0" prefWidth="180.0" text="Clienti" />
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="80.0" prefWidth="180.0" text="Alimenti" />
-                        <Button fx:id="BottoneAlimenti" mnemonicParsing="false" prefHeight="83.0" prefWidth="212.0" text="Diete">
+                        <Button fx:id="BottoneAlimenti" mnemonicParsing="false" prefHeight="80.0" prefWidth="212.0" styleClass="sidebar-button-active" text="Clienti">
                             <cursor>
                                 <Cursor fx:constant="HAND" />
                             </cursor>
                         </Button>
+                  <Button fx:id="BottoneAlimenti1" layoutX="10.0" layoutY="179.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="212.0" styleClass="sidebar-button-active" text="Alimenti">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="BottoneAlimenti2" layoutX="10.0" layoutY="99.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="212.0" styleClass="sidebar-button-active" text="Diete">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                     </children>
                 </VBox>
-                <AnchorPane prefHeight="531.0" prefWidth="742.0">
+            </left>
+            <center>
+                <VBox style="-fx-padding: 20;" styleClass="content-panel">
                     <children>
+                        <Label styleClass="page-title" text="Dieta">
+                            <font>
+                                <Font size="24.0" />
+                            </font>
+                            <padding>
+                                <Insets bottom="20.0" />
+                            </padding>
+                        </Label>
+                        <ListView fx:id="listaDiete" prefHeight="350.0" styleClass="diet-list" />
+                        <HBox alignment="CENTER_LEFT" spacing="10.0" style="-fx-padding: 10 0 0 0;">
+                            <children>
+                                <TextField fx:id="filtroNomeDietaTextField" promptText="Filtra per nome..." styleClass="search-field" />
+                                <Button mnemonicParsing="false" styleClass="button-positive" text="+ Nuova dieta" />
+                                <Button mnemonicParsing="false" styleClass="button-negative" text="-" />
+                            </children>
+                        </HBox>
                     </children>
-                </AnchorPane>
-            </children>
-        </HBox>
+                </VBox>
+            </center>
+        </BorderPane>
     </children>
 </AnchorPane>
