--- a/src/main/resources/com/matteotocci/app/AggiungiAlimentoDieta.fxml
+++ b/src/main/resources/com/matteotocci/app/AggiungiAlimentoDieta.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -11,45 +14,45 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="351.0" prefWidth="578.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.AggiungiAlimentoDieta">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.AggiungiAlimentoDieta">
     <children>
-        <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <VBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <HBox alignment="CENTER" prefHeight="30.0" prefWidth="358.0">
+                <HBox alignment="CENTER" prefHeight="30.0" prefWidth="600.0">
                     <children>
                         <Button mnemonicParsing="false" onAction="#mostraTabellaAlimenti" text="Alimenti" />
                         <Button mnemonicParsing="false" onAction="#mostraTabellaRicette" text="Ricette" />
                     </children>
                 </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <StackPane prefHeight="150.0" prefWidth="200.0">
-                     <children>
-                        <TextField fx:id="textCercaAlimento" promptText="Cerca alimento..." />
-                        <TextField fx:id="textCercaRicetta" layoutX="10.0" layoutY="37.0" promptText="Cerca ricetta..." visible="false" />
-                     </children>
-                  </StackPane>
-                  <StackPane layoutX="10.0" layoutY="10.0" prefHeight="150.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="ButtonCercaAlimento" mnemonicParsing="false" text="Cerca" onAction="#handleCercaAlimento"/>
-                        <Button fx:id="ButtonCercaRicetta" layoutX="44.0" layoutY="37.0" mnemonicParsing="false" text="Cerca" onAction="#handleCercaRicetta" visible="false" />
-                     </children>
-                  </StackPane>
-                  <StackPane layoutX="189.0" layoutY="10.0" prefHeight="150.0" prefWidth="200.0">
-                     <children>
-                        <ComboBox fx:id="ComboBoxAlimento" prefWidth="150.0" promptText="Categoria" />
-                        <ComboBox fx:id="ComboBoxRicetta" layoutX="10.0" layoutY="37.0" prefWidth="150.0" promptText="Categoria" visible="false" />
-                     </children>
-                  </StackPane>
-                  <StackPane layoutX="139.0" layoutY="10.0" prefHeight="150.0" prefWidth="200.0">
-                     <children>
-                        <CheckBox fx:id="CheckBoxAlimenti" mnemonicParsing="false" text="I miei alimenti" />
-                        <CheckBox fx:id="CheckBoxRicette" layoutX="21.0" layoutY="41.0" mnemonicParsing="false" text="Le mie ricette" visible="false" />
-                     </children>
-                  </StackPane>
-               </children>
-            </HBox>
-                <StackPane prefHeight="241.0" prefWidth="358.0">
+                <HBox prefHeight="100.0" prefWidth="600.0">
+                    <children>
+                        <StackPane prefHeight="150.0" prefWidth="200.0">
+                            <children>
+                                <TextField fx:id="textCercaAlimento" promptText="Cerca alimento..." />
+                                <TextField fx:id="textCercaRicetta" layoutX="10.0" layoutY="37.0" promptText="Cerca ricetta..." visible="false" />
+                            </children>
+                        </StackPane>
+                        <StackPane layoutX="200.0" layoutY="0.0" prefHeight="150.0" prefWidth="100.0">
+                            <children>
+                                <Button fx:id="ButtonCercaAlimento" mnemonicParsing="false" text="Cerca" onAction="#handleCercaAlimento" />
+                                <Button fx:id="ButtonCercaRicetta" layoutX="10.0" layoutY="37.0" mnemonicParsing="false" text="Cerca" onAction="#handleCercaRicetta" visible="false" />
+                            </children>
+                        </StackPane>
+                        <StackPane layoutX="300.0" layoutY="0.0" prefHeight="150.0" prefWidth="150.0">
+                            <children>
+                                <ComboBox fx:id="ComboBoxAlimento" prefWidth="150.0" promptText="Categoria" />
+                                <ComboBox fx:id="ComboBoxRicetta" layoutX="10.0" layoutY="37.0" prefWidth="150.0" promptText="Categoria" visible="false" />
+                            </children>
+                        </StackPane>
+                        <StackPane layoutX="450.0" layoutY="0.0" prefHeight="150.0" prefWidth="150.0">
+                            <children>
+                                <CheckBox fx:id="CheckBoxAlimenti" mnemonicParsing="false" text="I miei alimenti" />
+                                <CheckBox fx:id="CheckBoxRicette" layoutX="10.0" layoutY="37.0" mnemonicParsing="false" text="Le mie ricette" visible="false" />
+                            </children>
+                        </StackPane>
+                    </children>
+                </HBox>
+                <StackPane prefHeight="200.0" prefWidth="600.0">
                     <children>
                         <TableView fx:id="tableViewAlimenti" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="342.0" prefWidth="546.0">
                             <columns>
@@ -75,10 +78,23 @@
                         </TableView>
                     </children>
                 </StackPane>
-                <StackPane alignment="CENTER_RIGHT" prefHeight="28.0" prefWidth="358.0">
+                <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="600.0" spacing="10.0">
                     <children>
-                        <Button fx:id="confermaAlimentiButton" mnemonicParsing="false" text="Conferma Alimenti" visible="true" />
-                        <Button fx:id="confermaRicetteButton" mnemonicParsing="false" text="Conferma Ricette" visible="false" />
+                        <Label text="Quantità:" />
+                        <Spinner fx:id="quantitaSpinner" editable="true" initialValue="100" min="1" max="1000" amountToStepBy="50" prefWidth="100.0" />
+                        <Label text="grammi" />
+                    </children>
+                    <padding>
+                        <Insets left="10.0" />
+                    </padding>
+                </HBox>
+                <StackPane alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="600.0">
+                    <padding>
+                        <Insets right="10.0" />
+                    </padding>
+                    <children>
+                        <Button fx:id="confermaAlimentiButton" mnemonicParsing="false" text="Conferma Alimenti" visible="true" onAction="#confermaAlimenti" />
+                        <Button fx:id="confermaRicetteButton" mnemonicParsing="false" text="Conferma Ricette" visible="false" onAction="#confermaRicette" />
                     </children>
                 </StackPane>
             </children>
