--- a/src/main/resources/com/matteotocci/app/AggiungiGiornoDieta.fxml
+++ b/src/main/resources/com/matteotocci/app/AggiungiGiornoDieta.fxml
@@ -8,18 +8,27 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.RowConstraints?>
+
 
 <BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.AggiungiGiornoDieta">
     <top>
-        <Label text="Aggiungi Alimenti al Piano" style="-fx-font-weight: bold; -fx-font-size: 20px; -fx-padding: 10;" BorderPane.alignment="CENTER">
-            <font>
-                <Font name="Arial Bold" size="20.0" />
-            </font>
-        </Label>
+        <VBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
+            <Label text="Aggiungi Alimenti al Piano" style="-fx-font-weight: bold; -fx-font-size: 20px;">
+                <font>
+                    <Font name="Arial Bold" size="20.0" />
+                </font>
+            </Label>
+            <Label fx:id="giornoCorrenteLabel" text="Giorno Corrente: 1/7" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+            <Separator />
+        </VBox>
     </top>
     <center>
         <ScrollPane fitToWidth="true" fitToHeight="true">
@@ -36,6 +45,7 @@
                         <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
+                        <!-- Colazione -->
                         <VBox spacing="10.0">
                             <children>
                                 <Label text="Colazione" style="-fx-font-weight: bold; -fx-font-size: 16px;">
@@ -44,13 +54,22 @@
                                     </font>
                                 </Label>
                                 <ListView fx:id="colazioneListView" prefHeight="150.0" style="-fx-border-color: #cccccc; -fx-border-radius: 5; -fx-background-color: white;"/>
-                                <Button mnemonicParsing="false" onAction="#openAggiungiAlimentoDieta" text="Aggiungi Alimento" fx:id="aggiungiColazioneButton">
-                                    <font>
-                                        <Font name="Arial" size="12.0" />
-                                    </font>
-                                </Button>
+                                <HBox spacing="10">
+                                    <Button mnemonicParsing="false" onAction="#openAggiungiAlimentoDieta" text="Aggiungi Alimento" fx:id="aggiungiColazioneButton">
+                                        <font>
+                                            <Font name="Arial" size="12.0" />
+                                        </font>
+                                    </Button>
+                                    <Button mnemonicParsing="false" onAction="#rimuoviAlimento" text="Rimuovi Alimento" fx:id="rimuoviColazioneButton">
+                                        <font>
+                                            <Font name="Arial" size="12.0" />
+                                        </font>
+                                    </Button>
+                                </HBox>
                             </children>
                         </VBox>
+
+                        <!-- Spuntino Mattina -->
                         <VBox spacing="10.0" GridPane.columnIndex="1">
                             <children>
                                 <Label text="Spuntino Mattina" style="-fx-font-weight: bold; -fx-font-size: 16px;">
@@ -59,13 +78,22 @@
                                     </font>
                                 </Label>
                                 <ListView fx:id="spuntinoMattinaListView" prefHeight="150.0" style="-fx-border-color: #cccccc; -fx-border-radius: 5; -fx-background-color: white;"/>
-                                <Button mnemonicParsing="false" onAction="#openAggiungiAlimentoDieta" text="Aggiungi Alimento" fx:id="aggiungiSpuntinoMattinaButton">
-                                    <font>
-                                        <Font name="Arial" size="12.0" />
-                                    </font>
-                                </Button>
+                                <HBox spacing="10">
+                                    <Button mnemonicParsing="false" onAction="#openAggiungiAlimentoDieta" text="Aggiungi Alimento" fx:id="aggiungiSpuntinoMattinaButton">
+                                        <font>
+                                            <Font name="Arial" size="12.0" />
+                                        </font>
+                                    </Button>
+                                    <Button mnemonicParsing="false" onAction="#rimuoviAlimento" text="Rimuovi Alimento" fx:id="rimuoviSpuntinoMattinaButton">
+                                        <font>
+                                            <Font name="Arial" size="12.0" />
+                                        </font>
+                                    </Button>
+                                </HBox>
                             </children>
                         </VBox>
+
+                        <!-- Pranzo -->
                         <VBox spacing="10.0" GridPane.rowIndex="1">
                             <children>
                                 <Label text="Pranzo" style="-fx-font-weight: bold; -fx-font-size: 16px;">
@@ -74,13 +102,22 @@
                                     </font>
                                 </Label>
                                 <ListView fx:id="pranzoListView" prefHeight="150.0" style="-fx-border-color: #cccccc; -fx-border-radius: 5; -fx-background-color: white;"/>
-                                <Button mnemonicParsing="false" onAction="#openAggiungiAlimentoDieta" text="Aggiungi Alimento" fx:id="aggiungiPranzoButton">
-                                    <font>
-                                        <Font name="Arial" size="12.0" />
-                                    </font>
-                                </Button>
+                                <HBox spacing="10">
+                                    <Button mnemonicParsing="false" onAction="#openAggiungiAlimentoDieta" text="Aggiungi Alimento" fx:id="aggiungiPranzoButton">
+                                        <font>
+                                            <Font name="Arial" size="12.0" />
+                                        </font>
+                                    </Button>
+                                    <Button mnemonicParsing="false" onAction="#rimuoviAlimento" text="Rimuovi Alimento" fx:id="rimuoviPranzoButton">
+                                        <font>
+                                            <Font name="Arial" size="12.0" />
+                                        </font>
+                                    </Button>
+                                </HBox>
                             </children>
                         </VBox>
+
+                        <!-- Spuntino Pomeriggio -->
                         <VBox spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                             <children>
                                 <Label text="Spuntino Pomeriggio" style="-fx-font-weight: bold; -fx-font-size: 16px;">
@@ -89,13 +126,22 @@
                                     </font>
                                 </Label>
                                 <ListView fx:id="spuntinoPomeriggioListView" prefHeight="150.0" style="-fx-border-color: #cccccc; -fx-border-radius: 5; -fx-background-color: white;"/>
-                                <Button mnemonicParsing="false" onAction="#openAggiungiAlimentoDieta" text="Aggiungi Alimento" fx:id="aggiungiSpuntinoPomeriggioButton">
-                                    <font>
-                                        <Font name="Arial" size="12.0" />
-                                    </font>
-                                </Button>
+                                <HBox spacing="10">
+                                    <Button mnemonicParsing="false" onAction="#openAggiungiAlimentoDieta" text="Aggiungi Alimento" fx:id="aggiungiSpuntinoPomeriggioButton">
+                                        <font>
+                                            <Font name="Arial" size="12.0" />
+                                        </font>
+                                    </Button>
+                                    <Button mnemonicParsing="false" onAction="#rimuoviAlimento" text="Rimuovi Alimento" fx:id="rimuoviSpuntinoPomeriggioButton">
+                                        <font>
+                                            <Font name="Arial" size="12.0" />
+                                        </font>
+                                    </Button>
+                                </HBox>
                             </children>
                         </VBox>
+
+                        <!-- Cena -->
                         <VBox spacing="10.0" GridPane.rowIndex="2">
                             <children>
                                 <Label text="Cena" style="-fx-font-weight: bold; -fx-font-size: 16px;">
@@ -104,13 +150,22 @@
                                     </font>
                                 </Label>
                                 <ListView fx:id="cenaListView" prefHeight="150.0" style="-fx-border-color: #cccccc; -fx-border-radius: 5; -fx-background-color: white;"/>
-                                <Button mnemonicParsing="false" onAction="#openAggiungiAlimentoDieta" text="Aggiungi Alimento" fx:id="aggiungiCenaButton">
-                                    <font>
-                                        <Font name="Arial" size="12.0" />
-                                    </font>
-                                </Button>
+                                <HBox spacing="10">
+                                    <Button mnemonicParsing="false" onAction="#openAggiungiAlimentoDieta" text="Aggiungi Alimento" fx:id="aggiungiCenaButton">
+                                        <font>
+                                            <Font name="Arial" size="12.0" />
+                                        </font>
+                                    </Button>
+                                    <Button mnemonicParsing="false" onAction="#rimuoviAlimento" text="Rimuovi Alimento" fx:id="rimuoviCenaButton">
+                                        <font>
+                                            <Font name="Arial" size="12.0" />
+                                        </font>
+                                    </Button>
+                                </HBox>
                             </children>
                         </VBox>
+
+                        <!-- Totali Giornalieri -->
                         <VBox spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                             <children>
                                 <Label text="Totali Giornalieri" style="-fx-font-weight: bold; -fx-font-size: 18px;">
@@ -178,22 +233,17 @@
             <padding>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </padding>
-            <Button mnemonicParsing="false" onAction="#indietroGiornoButtonAction" text="Giorno Precedente">
+            <Button mnemonicParsing="false" onAction="#indietroGiornoButtonAction" text="Giorno Precedente" fx:id="indietroGiornoButton">
                 <font>
                     <Font name="Arial" size="12.0" />
                 </font>
             </Button>
-            <Label fx:id="giornoCorrenteLabel" text="Giorno Corrente: 1/7" style="-fx-font-size: 14px; -fx-font-weight: bold;">
-                <font>
-                    <Font name="Arial Bold" size="14.0" />
-                </font>
-            </Label>
-            <Button mnemonicParsing="false" onAction="#avantiGiornoButtonAction" text="Giorno Successivo">
+            <Button mnemonicParsing="false" onAction="#avantiGiornoButtonAction" text="Giorno Successivo" fx:id="avantiGiornoButton">
                 <font>
                     <Font name="Arial" size="12.0" />
                 </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#salvaPianoButtonAction" text="Salva Piano">
+            <Button mnemonicParsing="false" onAction="#salvaPianoButtonAction" text="Salva Piano" fx:id="salvaPianoButton">
                 <font>
                     <Font name="Arial" size="12.0" />
                 </font>
